# AI-Web-Searcher

./: .gitignore  ISSUE.txt  PUBLISHING.md  README.md  baiduSearchTool.py  claude_desktop_config.json  claude_desktop_config2.json  dashscope.py  mcp.python.example.json  mcp.search-tools.json  pyproject.toml  realize.md  requirements.txt  test_dashscope.py
AIRunner/: SearchAgent.py  baiduSearchTool.py
angoISSUE/: dashscope-zhangyvjing’s MacBook Air.py  dashscopeISSUE-zhangyvjing’s MacBook Air.md  dashscopeISSUE.md  dashsp.py
python_mcp/: README.md  pyproject.toml
python_mcp/mcp_app/: schemas.py  server.py
python_mcp/mcp_app/orchestrator/: pipeline.py
python_mcp/mcp_app/search/providers/: base.py  google.py
python_mcp/mcp_app/utils/: config.py
python_mcp/mcp_app/workers/: ranker.py  small_model_worker.py
searcher/src/: server.py
searcher/src/FetchPage/: fetchWeb.py
searcher/src/WebSearch/: SearchAgent.py  baiduSearchTool.py
simpleRealize/: SearchAgent.py
src/AIWebSearcher/FetchPage/: fetchWeb.py
src/AIWebSearcher/WebSearch/: baiduSearchTool.py
src/AIWebSearcher/useAI2Search/: SearchAgent.py
