[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-app"
version = "0.1.0"
description = "Python MCP server scaffold for search orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=0.1.0",
  "pydantic>=2.6",
]

[project.scripts]
mcp-app = "mcp_app.server:main"

